# filmhouse_prime

./: LICENSE  README.md
scraper/: Cargo.toml  amazon_films.json  films.json
