[package]
name = "scraper"
version = "0.1.0"
authors = ["Mike Moran <mike@houseofmoran.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.11"
reqwest = "0.9"
chrono = "0.4"
time = "0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = "2.33"
url = "2.1"